# HyporheicTools

./: .gitattributes  LICENSE  README.md  _astcheck.py  pyproject.toml
environment/: arcgispro.yml
examples/basic_case/input/: BlendedTerrain.LoweredTerrain.tif  BlendedTerrain.LoweredTerrain.tif.aux.xml  GWDomain.dbf  GWDomain.shp  GWDomain.shx  HighResOrtho_23Oct2014_Clip.tfw  HighResOrtho_23Oct2014_Clip.tif.aux.xml  HighResOrtho_23Oct2014_Clip.tif.ovr  HighResOrtho_23Oct2014_Clip.tif.xml  L_FPL.dbf  L_FPL.shp  L_FPL.shx  R_FPL.dbf  R_FPL.shp  R_FPL.shx  WSE (Max).USGS_1m_FebApril2018_DEM.U_USGS-3DEP_dtm_hyrdo_flattened_20240412.2041_1.tif  inputs.yaml  k_polygon.dbf  k_polygon.sbn  k_polygon.sbx  k_polygon.shp  k_polygon.shp.xml  k_polygon.shx
examples/basic_case/output/model/: cropped_water_surface_raster.tif  grid_points_elevation.csv  reprojected_water_surface_raster.tif
examples/basic_case/output/model/gwf_workspace/: Hyporheic.ims  Hyporheic.tdis  gwf_model.chd  gwf_model.dis  gwf_model.ic  gwf_model.nam  gwf_model.npf  gwf_model.oc  gwf_model_0.chd  mfsim.lst  mfsim.nam
examples/basic_case/output/model/mp7_workspace/: Hyporheic_mp_forward.mpbas  Hyporheic_mp_forward.mpend  Hyporheic_mp_forward.mplst  Hyporheic_mp_forward.mpnam  Hyporheic_mp_forward.mpsim
examples/basic_case/output/summary/: Forward_full_pathlines_3D.dbf  Forward_full_pathlines_3D.shp  Forward_full_pathlines_3D.shp.xml  Forward_full_pathlines_3D.shx  Forward_hyporheic_pathlines_2D_HECRAS_CRS.dbf  Forward_hyporheic_pathlines_2D_HECRAS_CRS.shp  Forward_hyporheic_pathlines_2D_HECRAS_CRS.shx  Forward_hyporheic_pathlines_3D_HECRAS_CRS.dbf  Forward_hyporheic_pathlines_3D_HECRAS_CRS.shp  Forward_hyporheic_pathlines_3D_HECRAS_CRS.shx  Forward_hyporheic_points_HECRAS_CRS.dbf  Forward_hyporheic_points_HECRAS_CRS.prj  Forward_hyporheic_points_HECRAS_CRS.shp  Forward_hyporheic_points_HECRAS_CRS.shx  Forward_particle_summary_table.csv  Forward_pathline_stats.txt
examples/basic_case/output/summary/head/: head_zyx.nc  model_vars.nc
examples/basic_case/output/summary/head/per_layer_tif/: head_L01.tif  head_L02.tif  head_L03.tif  head_L04.tif  head_L05.tif  head_L06.tif  head_L07.tif  head_L08.tif  head_L09.tif  head_L10.tif  head_L11.tif  head_L12.tif  head_L13.tif  head_L14.tif  head_L15.tif  head_L16.tif  head_L17.tif  head_L18.tif  head_L19.tif  head_L20.tif  head_L21.tif  head_L22.tif  head_L23.tif  head_L24.tif  head_L25.tif  head_L26.tif  head_L27.tif  head_L28.tif  head_L29.tif  head_L30.tif  head_L31.tif  head_L32.tif  head_L33.tif  head_L34.tif  head_L35.tif  head_L36.tif  head_L37.tif  head_L38.tif  head_L39.tif  head_L40.tif
examples/basic_case/output/summary/plots_forward/: pathline_stats_Forward.csv
examples/basic_case/output/summary/plots_forward/alignment_debug_forward/: grid_box_HECRAS_CRS.dbf  grid_box_HECRAS_CRS.prj  grid_box_HECRAS_CRS.shp  grid_box_HECRAS_CRS.shx  grid_edges_HECRAS_CRS.dbf  grid_edges_HECRAS_CRS.shp  grid_edges_HECRAS_CRS.shx  pathlines_debug.dbf  pathlines_debug.shp  pathlines_debug.shx  points_debug.dbf  points_debug.shp  points_debug.shx
notebooks/: run_from_yaml_workflow.ipynb
src/HyporheicTools/: __main__.py  inputs.py  requirements.txt
src/HyporheicTools/cli/: main.py
src/HyporheicTools/core/: logging_bridge.py  run_from_yaml.py
src/HyporheicTools/data/templates/: inputs_TEMPLATE.yaml
src/HyporheicTools/esri/help/gp/toolboxes/: Hyporheic_Toolbox.xml
src/HyporheicTools/esri/symbology/: cells.lyrx  pathlines.lyrx
src/HyporheicTools/esri/toolboxes/: Hyporheic_Toolbox.RunModel.pyt.xml  Hyporheic_Toolbox.pyt  Hyporheic_Toolbox.pyt.xml  __init__.py
src/HyporheicTools/functions/: common_imports_for_main.py  model_utils.py  my_utils.py  old_my_utils.py  path_utils.py  runners.py
tests/integration/: test_basic_case.py
tests/unit/: test_inputs.py
